*****************************************************************************************************
digiKam 5.2.0 - Release date: 2016-09-11

NEW FEATURES:


BUGFIXES FROM BUGZILLA:

001 ==> 